# pytest-example

./: Makefile  README.md  greeting.py  hello.py  notebook.ipynb  pyproject.toml  requirements.txt
.github/workflows/: testing-ci.yml
tests/: test_greeting.py  test_hello.py
