[tool.poetry]
name = "pytest-examples"
version = "0.1.0"
description = ""
authors = ["Taylor Sly <Taylor.Sly@target.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
pylint = "^3.3.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
